--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -31,7 +31,7 @@
   body {
     @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
-    background-image: url("src/assets/images/Pinterest.jpg");
+    /*background-image: url("src/assets/images/Pinterest.jpg");*/
   }
   section,
   footer {
@@ -95,8 +95,6 @@
   html {
     overflow-y: scroll;
     font-size: 20px;
-    font-weight: 560;
-    font-family: 'Roboto', sans-serif;
   }
 
   /* width */
@@ -127,9 +125,12 @@
   pre > code {
     white-space: pre;
   }
-  .main-content{
-    background-color: #f0f0f1;
-  }
+  /*.main-content{*/
+  /*  background-color: #F5F5DC;*/
+  /*}*/
+  /*p {*/
+  /*  color: black; !* 使用红色 *!*/
+  /*}*/
 }
 
 @layer components {
