修改最近文章个数为5，翻译所有英文为中文

--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -24,35 +24,7 @@ breadcrumbList[0] === "tags" &&
   );
 ---
 
-<nav class="breadcrumb" aria-label="breadcrumb">
-  <ul>
-    <li>
-      <a href="/">Home</a>
-      <span aria-hidden="true">&raquo;</span>
-    </li>
-    {
-      breadcrumbList.map((breadcrumb, index) =>
-        index + 1 === breadcrumbList.length ? (
-          <li>
-            <span
-              class={`${index > 0 ? "lowercase" : "capitalize"}`}
-              aria-current="page"
-            >
-              {/* make the last part lowercase in Home > Tags > some-tag */}
-              {decodeURIComponent(breadcrumb)}
-            </span>
-          </li>
-        ) : (
-          <li>
-            <a href={`/${breadcrumb}/`}>{breadcrumb}</a>
-            <span aria-hidden="true">&raquo;</span>
-          </li>
-        )
-      )
-    }
-  </ul>
-</nav>
-
+<!--<nav class="breadcrumb" aria-label="breadcrumb">--><!--  <ul>--><!--    <li>--><!--      <a href="/">Home</a>--><!--      <span aria-hidden="true">&raquo;</span>--><!--    </li>--><!--    {--><!--      breadcrumbList.map((breadcrumb, index) =>--><!--        index + 1 === breadcrumbList.length ? (--><!--          <li>--><!--            <span--><!--              class={`${index > 0 ? "lowercase" : "capitalize"}`}--><!--              aria-current="page"--><!--            >--><!--              {/* make the last part lowercase in Home > Tags > some-tag */}--><!--              {decodeURIComponent(breadcrumb)}--><!--            </span>--><!--          </li>--><!--        ) : (--><!--          <li>--><!--            <a href={`/${breadcrumb}/`}>{breadcrumb}</a>--><!--            <span aria-hidden="true">&raquo;</span>--><!--          </li>--><!--        )--><!--      )--><!--    }--><!--  </ul>--><!--</nav>-->
 <style>
   .breadcrumb {
     @apply mx-auto mb-1 mt-8 w-full max-w-3xl px-4;
