update mod is white

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -95,7 +95,7 @@ const { activeNav } = Astro.props;
               <li>
                 <button
                   id="theme-btn"
-                  className="focus-outline dark"
+                  className="focus-outline"
                   title="Toggles light & dark"
                   aria-label="auto"
                   aria-live="polite"
