--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,24 +35,26 @@ const { activeNav } = Astro.props;
           aria-expanded="false"
           aria-controls="menu-items"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="menu-icon"
-          >
-            <line x1="7" y1="12" x2="21" y2="12" class="line"></line>
-            <line x1="3" y1="6" x2="21" y2="6" class="line"></line>
-            <line x1="12" y1="18" x2="21" y2="18" class="line"></line>
-            <line x1="18" y1="6" x2="6" y2="18" class="close"></line>
-            <line x1="6" y1="6" x2="18" y2="18" class="close"></line>
-          </svg>
+          <link rel="icon" href="../assets/favicon.jpg" sizes="any" />
+          <!--<svg-->
+          <!--  xmlns="http://www.w3.org/2000/svg"-->
+          <!--  width="24"-->
+          <!--  height="24"-->
+          <!--  viewBox="0 0 24 24"-->
+          <!--  fill="none"-->
+          <!--  stroke="currentColor"-->
+          <!--  stroke-width="1.5"-->
+          <!--  stroke-linecap="round"-->
+          <!--  stroke-linejoin="round"-->
+          <!--  class="menu-icon"-->
+          <!--  -->
+          <!--&gt;-->
+          <!--  <line x1="7" y1="12" x2="21" y2="12" class="line"></line>-->
+          <!--  <line x1="3" y1="6" x2="21" y2="6" class="line"></line>-->
+          <!--  <line x1="12" y1="18" x2="21" y2="18" class="line"></line>-->
+          <!--  <line x1="18" y1="6" x2="6" y2="18" class="close"></line>-->
+          <!--  <line x1="6" y1="6" x2="18" y2="18" class="close"></line>-->
+          <!--</svg>-->
         </button>
         <ul id="menu-items" class="display-none sm:flex">
           <li>
