add google analyse

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -118,7 +118,20 @@ const { activeNav } = Astro.props;
   </div>
   <Hr />
 </header>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MZXCQSZ8FT"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
 
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
+  gtag("js", new Date());
+
+  gtag("config", "G-MZXCQSZ8FT");
+</script>
 <style>
   #skip-to-content {
     @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
